--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -3,6 +3,98 @@
 @use '@nebular/theme/styles/globals' as *;
 
 @include nb-install() {
-  @include nb-theme-global();
-};
+   @include nb-theme-global();
+}
 /* You can add global styles to this file, and also import other style files */
+
+body {
+   background-color: #edeff0;
+}
+
+* {
+   box-sizing: border-box;
+   margin: 0;
+   padding: 0;
+
+   font-family: "Inter", sans-serif;
+   letter-spacing: -0.03em;
+   user-select: none;
+}
+
+.centered-box {
+   position: fixed;
+   left: 50%;
+   top: 50%;
+   transform: translate(-50%, -50%);
+
+   background-color: #ffffff;
+   border-radius: 10px;
+   padding: 3rem 4rem 2.5rem;
+   box-shadow: 0 0 25px -10px rgba(0, 0, 0, 0.1);
+
+   min-width: 540px;
+
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+
+   .title {
+      font-size: 2rem;
+      font-weight: 700;
+
+      margin-top: 2rem;
+      margin-bottom: 0;
+   }
+
+   .message {
+      font-size: 1.2rem;
+
+      margin-top: 0.5rem;
+   }
+}
+
+.secondary-button {
+   font-size: 1rem;
+   font-weight: 500;
+
+   margin-top: 2rem;
+   padding: 0.5rem 1rem;
+
+   background-color: #f8f8f8;
+   border: 1px solid #e4e4e4;
+   border-radius: 5px;
+
+   cursor: pointer;
+   transition: background-color 0.2s ease-in-out;
+
+   &:hover {
+      background-color: #e4e4e4;
+   }
+}
+
+.input {
+   font-size: 1rem;
+   font-weight: 400;
+
+   padding: 0.5rem 0.8rem;
+
+   background-color: rgb(241, 242, 246);
+   border: 1px solid #e4e4e4;
+   border-radius: 5px;
+
+   transition: border-color 0.2s ease-in-out;
+
+   &:focus {
+      outline: none;
+      border-color: #c0c0c0;
+   }
+}
+
+.round-icon {
+   width: 80px;
+   height: 80px;
+
+   padding: 5px;
+   border-radius: 100%;
+}
