Implement UI for moderating screen

--- a/client/src/app/room/room-authentication/room-authentication.component.html
+++ b/client/src/app/room/room-authentication/room-authentication.component.html
@@ -11,6 +11,6 @@
          class="input"
          placeholder="Authentifizierungsschlüssel"
       />
-      <button (click)="submit()" class="secondary-button confirm-button">Anmelden</button>
+      <button (click)="submit()" class="button primary-button">Anmelden</button>
    </div>
 </div>
