--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -54,7 +54,7 @@ body {
    }
 }
 
-.secondary-button {
+.button {
    font-size: 1rem;
    font-weight: 500;
 
@@ -70,6 +70,17 @@ body {
 
    &:hover {
       background-color: #e4e4e4;
+   }
+}
+
+.primary-button {
+   $color: #4b7bec;
+   color: #ffffff;
+   background-color: $color;
+   border-color: darken($color, 4%);
+
+   &:hover {
+      background-color: darken($color, 4%);
    }
 }
 
