Create beautiful user interface for creating new rooms

--- a/client/src/app/create/create.component.html
+++ b/client/src/app/create/create.component.html
@@ -1,2 +1,8 @@
-<h1>Create new room</h1>
-<button nbButton (click)="createRoom()">Create</button>
+<div class="centered-box">
+   <div class="round-icon">
+      <nb-icon icon="plus-circle"></nb-icon>
+   </div>
+   <h1 class="title">Neuer Raum</h1>
+   <p class="message">Eröffne einen neuen Raum, den du moderieren kannst.</p>
+   <button class="button" (click)="createRoom()">Raum erstellen</button>
+</div>
