--- a/client/src/app/room/moderator/moderator.component.html
+++ b/client/src/app/room/moderator/moderator.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-   <h1 class="title">Moderator</h1>
+   <h1 class="title">{{ roomName }}</h1>
+   <h2 class="subtitle">Moderator</h2>
    <div class="box">
       <h2 class="box-header">Authentifizierungsschlüssel</h2>
       <div class="box-content">
