--- a/client/src/app/room/moderator/moderator.component.scss
+++ b/client/src/app/room/moderator/moderator.component.scss
@@ -14,6 +14,15 @@
       font-weight: 700;
       font-size: 2.5rem;
    }
+
+   .subtitle {
+      margin-top: 0;
+      margin-bottom: 0;
+
+      font-weight: 600;
+      font-size: 1.75rem;
+      opacity: 50%;
+   }
 }
 
 .box {
