--- a/client/src/app/room/moderator/moderator.component.scss
+++ b/client/src/app/room/moderator/moderator.component.scss
@@ -70,9 +70,9 @@
    }
 }
 
-.token-item {
+.row {
    display: flex;
-   gap: 50px;
+   gap: 20px;
 
    &:not(:last-child) {
       margin-bottom: 6px;
@@ -86,18 +86,18 @@
       align-items: center;
    }
 
-   .col-key {
+   .token-key {
       background-color: darken(#ffffff, 3%);
       border-radius: 4px;
       padding: 0.2rem 0.4rem;
       user-select: text;
    }
 
-   .col-name {
+   .token-name {
       font-weight: 500;
    }
 
-   .col-used {
+   .token-used {
       width: 120px;
 
       span {
@@ -117,6 +117,37 @@
             color: #eb3b5a;
             background-color: transparentize(#eb3b5a, 0.85);
          }
+      }
+   }
+
+   .question-number {
+      width: 50px;
+      justify-content: center;
+
+      background-color: darken(#ffffff, 3%);
+      border-radius: 4px;
+      padding: 0.2rem 0.4rem;
+   }
+
+   .question-name {
+      font-weight: 500;
+   }
+
+   .question-type {
+      width: fit-content;
+
+      span {
+         display: inline-block;
+         width: 150px;
+         padding: 0.2rem 0.4rem;
+
+         border-radius: 20px;
+         text-align: center;
+         font-size: 1rem;
+         font-weight: 500;
+
+         color: #4b7bec;
+         background-color: transparentize(#4b7bec, 0.85);
       }
    }
 }
