--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -40,6 +40,7 @@ body {
    align-items: center;
 
    .title {
+      text-align: center;
       font-size: 2rem;
       font-weight: 700;
 
@@ -48,6 +49,7 @@ body {
    }
 
    .message {
+      text-align: center;
       font-size: 1.2rem;
 
       margin-top: 0.5rem;
