--- a/client/src/app/room/moderator/moderator.component.scss
+++ b/client/src/app/room/moderator/moderator.component.scss
@@ -65,7 +65,6 @@
 
       button {
          margin-top: 0;
-         width: 15%;
       }
    }
 }
@@ -149,5 +148,32 @@
          color: #4b7bec;
          background-color: transparentize(#4b7bec, 0.85);
       }
+   }
+}
+
+.start {
+   position: fixed;
+   left: 50%;
+   bottom: 3rem;
+   transform: translateX(-50%);
+   transition: 0.15s ease-in-out;
+   cursor: pointer;
+
+   width: 3.5rem;
+   height: 3.5rem;
+   padding: 0.25rem;
+
+   color: #20bf6b;
+   background-color: #d0f0df;
+   border-radius: 100%;
+   box-shadow: 0 4px 8px -2px rgba(32, 191, 107, 0.33);
+
+   &:hover:not(.disabled) {
+      transform: translateX(-50%) scale(1.1);
+   }
+
+   &.disabled {
+      filter: grayscale(50%);
+      cursor: not-allowed;
    }
 }
