--- a/client/src/app/room/waiting/room-waiting.component.html
+++ b/client/src/app/room/waiting/room-waiting.component.html
@@ -2,7 +2,7 @@
    <h1 class="room-name">{{ roomName }}</h1>
    <h2 class="room-message">Warte auf Start durch den Moderator...</h2>
 
-   <p class="player-name">
+   <p class="fixed-toast">
       Angemeldet als <b>{{ playerName }}</b>
    </p>
 </div>
