--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,10 +1,3 @@
-@use 'themes' as *;
-
-@use '@nebular/theme/styles/globals' as *;
-
-@include nb-install() {
-   @include nb-theme-global();
-}
 /* You can add global styles to this file, and also import other style files */
 
 body {
@@ -19,6 +12,37 @@ body {
    font-family: "Inter", sans-serif;
    letter-spacing: -0.03em;
    user-select: none;
+}
+
+.blue-container {
+   margin: 0;
+   height: 100vh;
+   background-color: #4b7bec;
+
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+}
+
+.question-header {
+   position: fixed;
+   top: 3rem;
+
+   .question-number {
+      font-size: 2rem;
+      text-align: center;
+
+      color: #ffffff;
+      opacity: 0.75;
+   }
+
+   .question-name {
+      font-size: 5rem;
+      text-align: center;
+
+      color: #ffffff;
+   }
 }
 
 .centered-box {
@@ -110,4 +134,26 @@ body {
 
    padding: 5px;
    border-radius: 100%;
+}
+
+.fixed-toast {
+   position: fixed;
+   bottom: 3rem;
+
+   min-width: 300px;
+   padding: 0.6rem 1.6rem;
+
+   border-radius: 6px;
+   background-color: #ffffff;
+   box-shadow: 0 4px 12px -4px rgba(0, 0, 0, 0.4);
+
+   color: rgba(0, 0, 0, 0.85);
+   font-size: 1.125rem;
+   font-weight: 500;
+   text-align: center;
+
+   b {
+      font-weight: 600;
+      color: #375cb5;
+   }
 }
