--- a/client/src/app/question/question-prompt/question-prompt.component.scss
+++ b/client/src/app/question/question-prompt/question-prompt.component.scss
@@ -24,3 +24,43 @@
    bottom: 3rem;
    font-size: 1.5rem;
 }
+
+.bigger-toast {
+   animation: animate-bigger-toast 1s ease-out forwards;
+}
+
+.progress-bar {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+
+   width: 0;
+   height: 5px;
+   background-color: #ffffff;
+
+   animation: animate-progress-bar 1s linear forwards;
+}
+
+@keyframes animate-progress-bar {
+   0% {
+      width: 0;
+   }
+   100% {
+      width: 100%;
+   }
+}
+
+@keyframes animate-bigger-toast {
+   0% {
+      bottom: 50vh;
+      transform: translateY(50%) scale(1.2);
+   }
+   90% {
+      bottom: 50vh;
+      transform: translateY(50%) scale(1.2);
+   }
+   100% {
+      bottom: 3rem;
+      transform: translateY(0) scale(1);
+   }
+}
