--- a/client/src/app/room/room.component.html
+++ b/client/src/app/room/room.component.html
@@ -39,6 +39,7 @@
       *ngSwitchCase="'question-prompt'"
       [question]="question!"
       [onlyRead]="onlyRead"
+      [correct]="questionCorrect"
    >
    </app-question-prompt>
 </div>
