--- a/client/src/app/question/question-prompt/question-prompt.component.scss
+++ b/client/src/app/question/question-prompt/question-prompt.component.scss
@@ -41,6 +41,38 @@
    animation: animate-progress-bar 1s linear forwards;
 }
 
+.centered-text {
+   position: fixed;
+   left: 50%;
+   bottom: 48vh;
+   transform: translate(-50%, 50%);
+
+   color: #ffffff;
+   opacity: 0.8;
+
+   font-size: 1.875rem;
+   text-align: center;
+}
+
+.question-result {
+   font-size: 2rem;
+   font-weight: 500;
+   opacity: 1;
+
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+
+   nb-icon {
+      width: 120px;
+      height: 120px;
+
+      margin-bottom: 1.5rem;
+      color: #ffffff;
+   }
+}
+
 @keyframes animate-progress-bar {
    0% {
       width: 0;
@@ -52,11 +84,11 @@
 
 @keyframes animate-bigger-toast {
    0% {
-      bottom: 50vh;
+      bottom: 45vh;
       transform: translateY(50%) scale(1.2);
    }
    90% {
-      bottom: 50vh;
+      bottom: 45vh;
       transform: translateY(50%) scale(1.2);
    }
    100% {
