--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -23,6 +23,8 @@ body {
    flex-direction: column;
    justify-content: center;
    align-items: center;
+
+   transition: background-color 0.2s ease-in-out;
 }
 
 .question-header {
