Introduce leaderboards + reveal correct answer on screen

--- a/client/src/app/question/question-display/question-display.component.html
+++ b/client/src/app/question/question-display/question-display.component.html
@@ -5,6 +5,7 @@
    </div>
 
    <h2 class="prompt">{{ question.prompt }}</h2>
+   <p class="answer" *ngIf="reveal">Richtige Antwort: {{ correctAnswer }}</p>
 
    <div class="fixed-toast" [ngSwitch]="question.type">
       <span *ngSwitchCase="'multiple-choice'">
