--- a/client/src/app/question/question-display/question-display.component.scss
+++ b/client/src/app/question/question-display/question-display.component.scss
@@ -6,6 +6,16 @@
    color: #ffffff;
 }
 
+.answer {
+   font-size: 2.5rem;
+   font-weight: 500;
+   text-align: center;
+
+   color: #ffffff;
+   opacity: 0.9;
+   margin-top: 0.5rem;
+}
+
 .fixed-toast {
    bottom: 3rem;
    font-size: 1.5rem;
