--- a/client/src/app/room/room.component.html
+++ b/client/src/app/room/room.component.html
@@ -32,7 +32,11 @@
 
    <app-room-moderator *ngSwitchCase="'moderating'" [roomName]="roomName"> </app-room-moderator>
 
-   <app-question-display *ngSwitchCase="'question-display'" [question]="question!">
+   <app-question-display
+      *ngSwitchCase="'question-display'"
+      [question]="question!"
+      [reveal]="revealAnswer"
+   >
    </app-question-display>
 
    <app-question-prompt
@@ -42,4 +46,6 @@
       [correct]="questionCorrect"
    >
    </app-question-prompt>
+
+   <app-leaderboard *ngSwitchCase="'leaderboard'" [players]="leaderboardData"></app-leaderboard>
 </div>
