--- a/client/src/app/question/question-prompt/question-prompt.component.scss
+++ b/client/src/app/question/question-prompt/question-prompt.component.scss
@@ -20,6 +20,36 @@
    cursor: pointer;
 }
 
+.answer-field {
+   font-size: 2.5rem;
+   font-weight: 500;
+   padding: 0.4rem 0.8rem;
+
+   outline: none;
+   border-radius: 0.5rem;
+   border: 1px solid rgba(255, 255, 255, 0.2);
+
+   &:focus {
+      border: 2px solid rgba(0, 0, 0, 0.8);
+   }
+}
+
+.confirm-button {
+   outline: none;
+   border: 1px solid #d9d9d9;
+   border-radius: 0.5rem;
+   background-color: #ffffff;
+
+   color: #4b7bec;
+   font-size: 1.75rem;
+   font-weight: 600;
+
+   width: 70%;
+   margin-top: 1rem;
+   padding: 0.4rem;
+   cursor: pointer;
+}
+
 .fixed-toast {
    bottom: 3rem;
    font-size: 1.5rem;
