--- a/client/src/app/question/question-display/question-display.component.scss
+++ b/client/src/app/question/question-display/question-display.component.scss
@@ -3,7 +3,17 @@
    font-weight: 600;
    text-align: center;
 
+   max-width: 80vw;
+
    color: #ffffff;
+}
+
+.prompt-image {
+   margin-top: 2rem;
+   border: 1px solid #f0f0f0;
+   border-radius: 6px;
+   background-color: #ffffff;
+   box-shadow: 0 4px 12px -4px rgba(0, 0, 0, 0.4);
 }
 
 .answer {
