Show gained points in leaderboard

--- a/client/src/app/question/leaderboard/leaderboard.component.html
+++ b/client/src/app/question/leaderboard/leaderboard.component.html
@@ -10,7 +10,7 @@
       >
          <span class="place">{{ i + 1 + "." }}</span>
          <span class="name">{{ player.name }}</span>
-         <span class="score">{{ player.score + " Punkte" }}</span>
+         <span class="score">{{ player.score + " Punkte (+" + player.gained + ")" }}</span>
       </div>
    </div>
 </div>
