Improve user experience and adjust font sizes

--- a/client/src/app/question/question-prompt/question-prompt.component.html
+++ b/client/src/app/question/question-prompt/question-prompt.component.html
@@ -25,7 +25,8 @@
             id="answer"
             class="answer-field"
             placeholder="Antwort eingeben"
-            autofocus="autofocus"
+            autofocus
+            autocomplete="off"
             (keydown.enter)="sendInputAnswer()"
             (keydown)="filterInput($event)"
          />
